[package]
name = "sshash-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
lto = "thin"
incremental = true

[dependencies]
fxhash = "0.2.1"
itertools = "0.13.0"
size = "0.4.1"
sux = "0.4.4"
ptr_hash = { git = "https://github.com/RagnarGrootKoerkamp/ptrhash" }
minimizers = { git = "https://github.com/RagnarGrootKoerkamp/minimizers", default-features = false }
packed-seq = { git = "https://github.com/rust-seq/packed-seq" }
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
epserde = "0.6.1"

[dev-dependencies]
needletail = "0.5.1"
rand = "0.8.5"
